...
            android:id="@+id/btn_remove_owner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_outline"
            android:tag="remove_owner"
            android:text="@string/remove_owner"
            android:textAllCaps="false"
            android:textColor="@color/brand_black"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>
...
